--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 body{
 
-    background-color: rgb(188, 0, 0); 
+    background-color: rgb(233, 117, 117); 
+}
+
+em{
+
+    font-size: 10px;
     
+
+};
+ol{
+    color: black;
 }
